--- a/Supporting_Files/synx-plugin-Info.plist
+++ b/Supporting_Files/synx-plugin-Info.plist
@@ -27,6 +27,7 @@
 		<string>640F884E-CE55-4B40-87C0-8869546CAB7A</string>
 		<string>37B30044-3B14-46BA-ABAA-F01000C27B63</string>
 		<string>A2E4D43F-41F4-4FB9-BB94-7177011C9AED</string>
+		<string>E71C2CFE-BFD8-4044-8F06-00AE685A406C</string>
 	</array>
 	<key>NSPrincipalClass</key>
 	<string>BBUsynx-plugin</string>
